# AnimalService

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requitrments.txt
auth/: auth.py  base_key_service.py  bearer.py
auth/key_service/: exceptions.py
auth/key_service/api/: api.py  exeptions.py  key_model.py
auth/key_service/file/: service.py
db/: base.py  models.py
entities/: dto.py  model.py  service.py
entities/Animal/: dto.py  model.py  service.py
entities/Class/: dto.py  model.py  service.py
entities/Family/: dto.py  model.py  service.py
entities/Image/: dto.py  model.py  service.py
entities/Order/: dto.py  model.py  service.py
entities/Parameter/: dto.py  model.py  service.py
http/: http-client.env.json  http-client.private.env.json  test_animal.http  test_autorization.http  test_class.http  test_order.http
rs256/: gen_keys.sh  generate_jwt.py
