[tool.poetry]
name = "animalservice"
version = "0.1.0"
description = ""
authors = ["razzerone newrazzerone@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
aiomysql = "^0.2.0"
aiohttp = "^3.9.3"
aiodns = "^3.1.1"
jwt = "^1.3.1"
uvicorn = "^0.27.1"
cryptography = "^42.0.4"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
